Settings menu jump fix

--- a/admin/src/styles/pages/settings.scss
+++ b/admin/src/styles/pages/settings.scss
@@ -15,6 +15,7 @@
       cursor: pointer;
       padding: 0 10px;
       margin-right: 20px;
+      border-bottom: solid 1px transparent;
 
       @include media-breakpoint-up(lg) {
         padding: 0 20px;
